--- a/popup/style.css
+++ b/popup/style.css
@@ -4,49 +4,86 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
+    background-color: #121315;
+    border-radius: 5px;
 }
 
-#screenshot_mask {
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    display: block;
-    opacity: 0.3;
-    text-align: center;
-    box-sizing: border-box;
-    z-index: 2147483647;
-    border-color: black;
-    border-style: solid;
+#capture_fuctions{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    width: 330px;
 }
 
-#screenshot_focus:before,
-#screenshot_focus:after {
-    border: none !important;
-    content: "" !important;
-    height: 100% !important;
-    position: absolute !important;
-    width: 100% !important
+button{
+    background-color: #2c2e33;
+    border-radius: 3px;
+    border: 0px solid black;
+    width: 80px;
+    height: 70px;
+    margin-right: 1px;
+    color: antiquewhite;
 }
 
-#screenshot_focus:before {
-    border-right: 1px solid white !important;
-    border-bottom: 1px solid white !important;
-    left: -100% !important;
-    top: -100% !important
+hr{
+    margin : 10px 0px;
+    width: 330px;
 }
 
-#screenshot_focus:after {
-    border-top: 1px solid white !important;
-    border-left: 1px solid white !important;
-    left: 0 !important;
-    top: 0 !important
+#save_options{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
 
-#screenshot_focus {
-    height: 100% !important;
-    position: fixed !important;
-    width: 100% !important;
-    z-index: 2147483648 !important
+select{
+    background-color: #2c2e33;
+    color: antiquewhite;
+    outline: none;
+}
+
+select:nth-child(1){
+    border: 0px solid black;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    height: 25px;
+    padding: 3px;
+}
+
+select:nth-child(3){
+    border: 0px solid black;
+    height: 25px;
+    width: 55px;
+    padding: 3px;
+}
+
+#blank{
+    background-color: #2c2e33;
+    width: 10px;
+    height: 25px;
+    border-right: 1px solid antiquewhite;
+}
+
+#blank2{
+    background-color: #2c2e33;
+    width: 10px;
+    height: 25px;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+
+input{
+    background-color: #2c2e33;
+    border-radius: 3px;
+    border: 0px solid black;
+    margin-right: 1px;
+    color: antiquewhite;
+}
+
+#repasitory_control{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
